--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,7 @@ header {
     text-align: center;
 }
 
-input {
+.eg {
     text-align: center;
     background-color: black;
     border: 0ch;
@@ -16,6 +16,7 @@ input {
      1px 1px 0 #ffffff,
      1px 1px 10px #ffffff;color:#DE3535;
     font-size:xx-large;
+    outline: none;
 }
 
 .yes-button {
