--- a/styles/index.css
+++ b/styles/index.css
@@ -31,14 +31,28 @@ header {
     font-size: xx-large;
     color: white;
     cursor: pointer; /* Comme Tobias */
+    border-radius: 10px;
+    font-weight: bold;
+    border: white;
+
+    margin: 8px;
+    padding: 8px;
 }
 
 .yes-button {
     background-color: green;
 }
 
+.yes-button:hover {
+    background-color: rgb(0, 105, 0);
+}
+
 .no-button {
     background-color: red;
+}
+
+.no-button:hover {
+    background-color: rgb(216, 0, 0);
 }
 
 .fit-picture{
@@ -48,6 +62,10 @@ header {
 .main-container {
     flex-direction: column;
     text-align: center;
+}
+
+.button-container{
+    margin-top: 10px;
 }
 
 .title{
