--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,6 @@ body {
 
 header {
     text-align: center;
-    
 }
 
 .eg {
@@ -60,9 +59,14 @@ header {
 }
 
 .main-container {
-    flex-direction: column;
+    display: flex;
+    justify-content: center;
+}
+
+.container{
     text-align: center;
 }
+
 
 .button-container{
     margin-top: 10px;
