--- a/styles/index.css
+++ b/styles/index.css
@@ -67,10 +67,21 @@ header {
     text-align: center;
 }
 
-.progress-bar {
-    
+.progress-bar-container{
+    margin: 15px;
 }
 
+progress {
+    border: none;
+}
+
+progress::-moz-progress-bar {
+background: lightcolor;
+}
+
+progress::-webkit-progress-value {
+    background: red;
+}
 
 .button-container{
     margin-top: 10px;
