--- a/styles/index.css
+++ b/styles/index.css
@@ -78,6 +78,12 @@ header {
     animation: spin 1.5s linear infinite;
 }
 
+.tourneA {
+    -webkit-animation: spin 0.5s linear infinite;
+    -moz-animation: spin 0.5s linear infinite;
+    animation: spin 0.5s linear infinite;
+}
+
 @-moz-keyframes spin {
     100% { -moz-transform: rotate(-360deg); }
   }
@@ -87,3 +93,13 @@ header {
   @keyframes spin {
     100% { -webkit-transform: rotate(-360deg); transform: rotate(-360deg); }
   }
+
+.sizeEg{
+    max-height: 30vh;
+    border-radius: 50%;
+    margin: 3vh;
+}
+
+.bodyeg {
+    text-align: center;
+}
